# ruffle

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  LICENSE.txt  Makefile  PKGBUILD  README.md  TRANSLATORS  bt.sh  crowdin.yml  deny.toml  dependencies.md  package-lock.json  renovate.json  toml_to_md.sh  update-website.sh
android/native/: Cargo.toml  build.rs
core/: Cargo.toml  build.rs  rustfmt.toml
core/assets/: noto-sans.fla  noto-sans.swf  unicodes-file.txt  update-font.sh
core/attribute/: update_license.sh
core/build_playerglobal/: Cargo.toml
core/common/: Cargo.toml
core/macros/: Cargo.toml
core/src/: audio.rs  avm1.rs  avm2.rs  avm_rng.rs  backend.rs  binary_data.rs  bitmap.rs  bounding_box.rs  buffer.rs  button.rs  character.rs  collect.rs  color_transform.rs  compat_flags.rs  compatibility_rules.rs  config.rs  context.rs  context_menu.rs  crossdomain.rs  debug.rs  debug_ui.rs  debugable.rs  display_object.rs  drawing.rs  duration.rs  ecma_conversions.rs  edit_text.rs  either.rs  event.rs  events.rs  external.rs  flags.rs  focus_tracker.rs  font.rs  frame_lifecycle.rs  fte.rs  graphic.rs  html.rs  i18n.rs  input.rs  (+37 more)
core/tests/: integration_tests.rs  regression_tests.rs
debugger/: Cargo.toml
debugger/src/: command.rs  command_parser.rs  main.rs
desktop/: Cargo.toml  build.rs
desktop/assets/: OpenH264-license.txt  favicon-32.rgba  macOSEntitlements.plist  ruffle_desktop.rc
desktop/is_wine/: .gitignore  Cargo.toml  LICENSE  README.md
desktop/sdk/: README.md
desktop/src/: app.rs  audio.rs  backends.rs  cli.rs  config.rs  custom_event.rs  dbus.rs  debug.rs  diagnostics.rs  dialog.rs  executor.rs  font.rs  gui.rs  input.rs  locale.rs  log.rs  log_adapter.rs  macos_open_files.rs  main.rs  navigator.rs  player.rs  preferences.rs  render.rs  storage.rs  task.rs  time_demo.rs  tracy.rs  ui.rs  util.rs  windows.rs
exporter/: Cargo.toml
exporter/integration_tests/: Cargo.toml  README.md
exporter/src/: cli.rs  exporter.rs  lib.rs  main.rs  options.rs  player_ext.rs  progress.rs
font-renderers/gdi-font-renderer/: .gitignore  Cargo.toml  package-lock.json  package.json
font-renderers/swash-font-renderer/: .gitignore  Cargo.toml  package-lock.json  package.json
frontend-utils/: Cargo.toml
frontend-utils/src/: backends.rs  bookmarks.rs  bundle.rs  content.rs  lib.rs  parse.rs  player_options.rs  recents.rs  write.rs
fuzz/: .gitignore  Cargo.toml  README.md  corpuses.toml
fuzz/fuzz_targets/: parse_swf.rs
fuzz/fuzz_targets_afl/: parse_swf.rs
fuzz/src/: lib.rs  parse_swf.rs
gc_extra/: Cargo.toml
gc_extra/src/: barrier.rs  gc_ext.rs  lib.rs  lock.rs
lib/: Cargo.toml
lib/src/: backend.rs  lib.rs  library.rs  matrix.rs  movie_clip.rs  player.rs  stage.rs
render/: Cargo.toml
render/canvas/: Cargo.toml
render/common_tess/: Cargo.toml
render/glium/: Cargo.toml
render/naga-agal/: Cargo.toml
render/naga-pixelbender/: Cargo.toml
render/pathfinder/: Cargo.toml
render/pbasm/: Cargo.toml  README.md
render/pixel_bender/: Cargo.toml
render/src/: atf.rs  backend.rs  bitmap.rs  blend.rs  bounding_box.rs  color_transform.rs  commands.rs  error.rs  filters.rs  lib.rs  lines.rs  matrix.rs  matrix3d.rs  perspective_projection.rs  pixel_bender.rs  pixel_bender_support.rs  quality.rs  renderdoc.rs  shader_filter_common.wgsl  shader_source.rs  shape_utils.rs  stub.rs  tessellator.rs  transform.rs  triangles.rs  utils.rs
render/svg/: Cargo.toml
render/webgl/: Cargo.toml
render/wgpu/: Cargo.toml  build.rs  build_shaders.sh  uniforms.md
ruffle-3ds/: Cargo.toml
ruffle-3ds/audio-wips/: main.rs  main_working.rs
ruffle-3ds/shaders/: color.v.pica  texture.v.pica  vshader.pica
ruffle-3ds/src/: log.rs  main.rs  main.rs.other  render.rs
ruffle-3ds/swf/: ferris3ds.swf  sample.swf  sample1.swf
ruffle_gc_arena/: Cargo.toml
ruffle_gc_arena/src/: gc_cell.rs  gc_weak_cell.rs  lib.rs
ruffle_iggy_shim/: Cargo.toml
ruffle_iggy_shim/src/: lib.rs
scanner/: Cargo.toml
scanner/src/: analyze.rs  cli_options.rs  execute.rs  file_results.rs  logging.rs  main.rs  scan.rs  ser_bridge.rs
stub-report/: Cargo.toml  generate-report.sh
stub-report/src/: main.rs
swf/: Cargo.toml  README.md
swf/benches/: bench_swf.rs
swf/examples/: reading.rs  writing.rs
swf/src/: avm1.rs  error.rs  extensions.rs  lib.rs  read.rs  read_base.rs  string.rs  tag_code.rs  test_data.rs  types.rs  write.rs
tests/: Cargo.toml  README.md
tests/benches/: benches.rs
tests/fprunner/: README.md  agent.js  install.sh  mm.cfg
tests/framework/: Cargo.toml
tests/fs-tests-runner/: Cargo.toml
tests/input-format/: Cargo.toml
tests/mocket/: Cargo.toml
tests/socket-format/: Cargo.toml
tests/socket-mock/: Cargo.toml
tests/src/: compile.rs  execute.rs  flashplayer.rs  lib.rs  main.rs
tests/swfs/: Avm2Dummy.swf  Avm2Test.as  DefineBits-JpegTables-MX.swf  DefineBitsJpeg2-MX.fla  DefineBitsJpeg2-MX.swf  DefineBitsLossless.swf  DefineBitsLossless2.swf  DefineButton2-CS6.swf  DefineButtonCxformSound-MX.fla  DefineEditText-MX.fla  DefineEditText-MX.swf  DefineFont-MX.fla  DefineFont-MX.swf  DefineFont2-CS6.swf  DefineFont3-CS6.swf  DefineFont4.fla  DefineMorphShape-MX.fla  DefineMorphShape-MX.swf  DefineMorphShape2.fla  DefineMorphShape2.swf  DefineSceneAndFrameLabelData.swf  DefineShape.fla  DefineShape3.swf  DefineSound.swf  DefineSprite.fla  DefineVideoStream.fla  DefineVideoStream.swf  DoInitAction-CS6.swf  EmbedData.as  EnableDebugger2-CS6.fla  EnableTelemetry-password.fla  EnableTelemetry-password.swf  ExportAssets-CS6.fla  ExportAssets-CS6.swf  FrameLabel-CS6.fla  FrameLabel-CS6.swf  (+33 more)
types/: Cargo.toml
video/: Cargo.toml
web/: .eslintignore  .eslintrc.json  .eslintrc.yaml  .gitignore  .npmrc  .prettierignore  .prettierrc.json  .prettierrc.yaml  .stylelintignore  .stylelintrc.json  .stylelintrc.yaml  Cargo.toml  LICENSE.md  LICENSE_MIT  README.md  build.rs  build.sh  eslint.config.js  lerna.json  package-lock.json  package.json  webpack.config.js
(+19159 files in other folders)
