[workspace]
members = [
    "core",
    "core/macros",
    "core/build_playerglobal",
    "desktop",
    "swf",
    "flv",
    "web",
    "web/packages/extension/safari",
    "wstr",
    "scanner",

    "exporter",
    "exporter/integration_tests",

    "frontend-utils",

    "render",
    "render/canvas",
    "render/naga-agal",
    "render/wgpu",
    "render/webgl",

    "ruffle_gc_arena",

    "stub-report",

    "video",
    "video/software",
    "video/external",

    "tests",
    "tests/fs-tests-runner",
    "tests/input-format",
    "tests/socket-format",
    "tests/mocket",
    "tests/framework",
]
default-members = ["desktop"]
resolver = "2"

[workspace.package]
authors = ["Ruffle LLC <ruffle@ruffle.rs>"]
edition = "2021"
homepage = "https://ruffle.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruffle-rs/ruffle"
version = "0.2.0-nightly.2025.8.9"

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
naga = { version = "25.0.1", features = ["wgsl-out"] }
wgpu = "25.0.2"
egui = { git = "https://github.com/emilk/egui.git", branch = "main" }
clap = { version = "4.5.43", features = ["derive"] }
cpal = "0.15.3"
anyhow = "1.0"
slotmap = "1.0.7"
async-channel = "2.5.0"
bitflags = "2.9.1"
bytemuck = "1.23.2"
chrono = { version = "0.4.41", default-features = false }
enum-map = "2.7.3"
flate2 = "1.1.2"
futures = "0.3.31"
image = { version = "0.25.6", default-features = false }
js-sys = "0.3.77"
web-sys = "0.3.77"
log = "0.4"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = "1.0.219"
thiserror = "2.0.12"
url = "2.5.2"
# Make sure to match wasm-bindgen-cli version to this everywhere.
wasm-bindgen = "=0.2.100"
walkdir = "2.5.0"
tokio = "1.47.1"
# Switching from the `async-std` to the `tokio` runtime, which we depend on anyway.
rfd = { version = "0.15.4", default-features = false, features = ["tokio", "xdg-portal"] }
memmap2 = "0.9.7"
libtest-mimic = "0.8.1"
regex = "1.11.1"
toml = "0.8.23"
vfs = "0.12.2"
smallvec = { version = "1.15.1", features = ["const_new", "union"] }
serde_json = "1.0.142"
percent-encoding = "2.3.1"
approx = "0.5.1"
encoding_rs = "0.8.35"
byteorder = "1.5"
bitstream-io = "4.5.0"
indicatif = "0.17"
rayon = "1.10.0"
sha2 = "0.10.9"
indexmap = "2.10.0"
fnv = "1.0.7"
fluent-templates = "0.13.0"
lzma-rs = "0.3.0"
tempfile = "3.19.1"
tracing-wasm = "0.2.1"

[workspace.lints.rust]
# Clippy nightly often adds new/buggy lints that we want to ignore.
# Don't warn about these new lints on stable.
renamed_and_removed_lints = "allow"
unknown_lints = "allow"

[workspace.lints.clippy]
# LONG-TERM: These lints are unhelpful.
manual_map = "allow"             # Less readable: Suggests `opt.map(..)` instead of `if let Some(opt) { .. }`
manual_range_contains = "allow"  # Less readable: Suggests `(a..b).contains(n)` instead of `n >= a && n < b`
assigning_clones = "allow"       # Sometimes useful, but more often than not it doesn't do anything as
                                 # we overwrite an empty item. And sometimes it can even be a footgun
                                 # by keeping big allocations alive.

# Don't optimize build scripts and macros.
[profile.release.build-override]
opt-level = 0

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"

[profile.dev.package.h263-rs]
opt-level = 3

[profile.dev.package.h263-rs-yuv]
opt-level = 3

[profile.dev.package.nihav_core]
opt-level = 3

[profile.dev.package.nihav_codec_support]
opt-level = 3

[profile.dev.package.nihav_duck]
opt-level = 3

# TODO: Set rustflags here instead of in tools/build_wasm.ts, when that
# feature becomes stable. See: https://github.com/rust-lang/cargo/issues/10271
# Until then, these custom profiles let cargo keep the build cache alive
# across "dual-wasm" builds, separating it for the two .wasm modules.
[profile.web-wasm-mvp]
inherits = "release"

[profile.web-wasm-extensions]
inherits = "release"

[profile.ci]
inherits = "release"
debug-assertions = true
overflow-checks = true
# "Not too slow to compile, fast enough to run."
opt-level = 2
# Takes too long, especially on Windows, with marginal benefit otherwise.
lto = "off"
# This is also set with higher authority in `test_rust.yml`.
incremental = true
# Right between the defaults of 16 and 256, for crate fragment caching.
codegen-units = 64
