[package]
name = "ruffle_core"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
linkme = { version = "0.3", optional = true }
byteorder = { workspace = true }
bitstream-io = { workspace = true }
flate2 = { workspace = true }
fnv = { workspace = true }
gc-arena = { workspace = true }
slotmap = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
ruffle_render = { path = "../render", features = ["tessellator"] }
ruffle_video = { path = "../video" }
ruffle_macros = { path = "macros" }
ruffle_wstr = { path = "../wstr" }
swf = { path = "../swf" }
bitflags = { workspace = true }
smallvec = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
quick-xml = "0.37.5"
url = { workspace = true }
weak-table = "0.3.2"
percent-encoding = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
web-time = "1.1.0"
encoding_rs = { workspace = true }
rand = { version = "0.9.1", features = ["std", "small_rng", "os_rng"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
nellymoser-rs = { git = "https://github.com/ruffle-rs/nellymoser", rev = "073eb48d907201f46dea0c8feb4e8d9a1d92208c", optional = true }
regress = { git = "https://github.com/ruffle-rs/regras3", rev = "5fcb02513c5ab4e00df4346459f5a8d0521d8fed" }
flash-lso = { git = "https://github.com/ruffle-rs/rust-flash-lso", rev = "998f47c926b9986aabd518fbb7394ff56936d0b0" }
lzma-rs = { workspace = true, optional = true }
dasp = { version = "0.11.0", features = ["interpolate", "interpolate-linear", "signal"], optional = true }
symphonia = { version = "0.5.4", default-features = false, optional = true }
enumset = "1.1.10"
bytemuck = { workspace = true, features = ["derive"] }
clap = { workspace = true, optional=true }
realfft = "3.5.0"
hashbrown = { version = "0.14.5", features = ["raw"] }
scopeguard = "1.2.0"
fluent-templates = { workspace = true }
egui = { workspace = true, optional = true }
egui_extras = { git = "https://github.com/emilk/egui.git", branch = "main", default-features = false, optional = true }
png = { version = "0.17.16", optional = true }
flv-rs = { path = "../flv" }
async-channel = { workspace = true }
jpegxr = { git = "https://github.com/ruffle-rs/jpegxr", rev = "2a429b0d71ab416e10b73d4dbdcf34cfe2900395", optional = true }
image = { workspace = true, features = ["tiff"] }
enum-map = { workspace = true }
ttf-parser = "0.25"
num-bigint = "0.4"
unic-segment = "0.9.0"
id3 = "1.16.3"
either = "1.15.0"
chardetng = "0.1.17"
tracy-client = { version = "0.17.6", optional = true, default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies.futures]
workspace = true

[target.'cfg(target_family = "wasm")'.dependencies.wasm-bindgen-futures]
version = "0.4.50"

[features]
default = []
lzma = ["lzma-rs", "swf/lzma"]
avm_debug = []
tracy_avm = ["dep:tracy-client"]
deterministic = []
timeline_debug = []
mp3 = ["symphonia", "symphonia/mp3"]
aac = ["symphonia", "symphonia/aac"]
nellymoser = ["nellymoser-rs"]
audio = ["dasp"]
known_stubs = ["linkme", "serde"]
default_compatibility_rules = []
egui = ["dep:egui", "dep:egui_extras", "png"]
jpegxr = ["dep:jpegxr", "lzma"]
default_font = []
serde = ["serde/derive"]

[build-dependencies]
build_playerglobal = { path = "build_playerglobal" }
