[package]
name = "ruffle_desktop"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
cpal = "0.15.3"
egui = { workspace = true }
egui_extras = { version = "0.27.2", features = ["image"] }
egui-wgpu = { version = "0.27.2", features = ["winit"] }
image = { workspace = true, features = ["png"] }
egui-winit = "0.27.2"
fontdb = "0.16"
ruffle_core = { path = "../core", features = ["audio", "clap", "mp3", "nellymoser", "default_compatibility_rules", "egui"] }
ruffle_render = { path = "../render", features = ["clap"] }
ruffle_render_wgpu = { path = "../render/wgpu", features = ["clap"] }
ruffle_video_software = { path = "../video/software", optional = true }
ruffle_frontend_utils = { path = "../frontend-utils" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2.3"
winit = "0.29.15"
webbrowser = "1.0.1"
url = { workspace = true }
dirs = "5.0"
rfd = "0.14.1"
anyhow = { workspace = true }
bytemuck = { workspace = true }
os_info = { version = "3", default-features = false }
unic-langid = "0.9.4"
sys-locale = "0.3.1"
wgpu = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
fluent-templates = "0.9.4"
toml_edit = { version = "0.22.12", features = ["parse"] }
gilrs = "0.10"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"]}

# Deliberately held back to match tracy client used by profiling crate
tracing-tracy = { version = "=0.10.4", optional = true }
rand = "0.8.5"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[build-dependencies]
embed-resource = "2"
vergen = { version = "8.3.1", features = ["build", "git", "gitcl", "cargo"] }

[features]
default = ["software_video"]
jpegxr = ["ruffle_core/jpegxr"]

# core features
avm_debug = ["ruffle_core/avm_debug"]
lzma = ["ruffle_core/lzma"]
software_video = ["ruffle_video_software"]
tracy = ["tracing-tracy", "ruffle_render_wgpu/profile-with-tracy"]

# wgpu features
render_debug_labels = ["ruffle_render_wgpu/render_debug_labels"]
render_trace = ["ruffle_render_wgpu/render_trace"]

# sandboxing
sandbox = []

