[package]
name = "ruffle_desktop"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
cpal = { workspace = true }
egui = { workspace = true }
egui_extras = { git = "https://github.com/emilk/egui.git", branch = "main", default-features = false, features = ["image"] }
egui-wgpu = { git = "https://github.com/emilk/egui.git", branch = "main", features = ["winit"] }
image = { workspace = true, features = ["png"] }
egui-winit = { git = "https://github.com/emilk/egui.git", branch = "main" }
fontdb = "0.23"
ruffle_core = { path = "../core", features = ["audio", "clap", "mp3", "aac", "nellymoser", "default_compatibility_rules", "egui"] }
ruffle_render = { path = "../render", features = ["clap"] }
ruffle_render_wgpu = { path = "../render/wgpu", features = ["clap"] }
ruffle_video_software = { path = "../video/software", optional = true }
ruffle_video_external = { path = "../video/external", features = ["openh264"], optional = true }
ruffle_frontend_utils = { path = "../frontend-utils", features = ["cpal", "fs", "navigator", "executor"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2.3"
winit = "0.30.12"
webbrowser = "1.0.5"
url = { workspace = true }
dirs = "6.0"
rfd = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
os_info = { version = "3", default-features = false }
unic-langid = "0.9.6"
sys-locale = "0.3.2"
wgpu = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
fluent-templates = { workspace = true }
toml_edit = { version = "0.23.6", features = ["parse"] }
gilrs = "0.11"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }

tracing-tracy = { version = "0.11.3", optional = true, features = ["demangle"] }
rand = "0.9.1"
thiserror.workspace = true
async-channel.workspace = true
unicode-bidi = "0.3.18"
fontconfig = { version = "0.10.0", optional = true, features = ["dlopen"]}
memmap2.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.11.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }

[build-dependencies]
embed-resource = "3"
vergen = { version = "8.3.2", features = ["build", "git", "gitcl", "cargo"] }

[features]
default = ["software_video", "external_video", "lzma", "fontconfig"]
jpegxr = ["ruffle_core/jpegxr"]

# core features
avm_debug = ["ruffle_core/avm_debug"]
lzma = ["ruffle_core/lzma"]
software_video = ["ruffle_video_software"]
external_video = ["ruffle_video_external"]
tracy = ["tracing-tracy", "ruffle_render_wgpu/profile-with-tracy"]
fontconfig = ["dep:fontconfig"]

# wgpu features
render_debug_labels = ["ruffle_render_wgpu/render_debug_labels"]

# sandboxing
sandbox = []
