[package]
name = "exporter"
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>"]
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
futures = "0.3"
ruffle_core = { path = "../core", features = ["deterministic", "default_font"] }
ruffle_render_wgpu = { path = "../render/wgpu", features = ["clap"] }
image = { version = "0.25.0", default-features = false, features = ["png"] }
log = "0.4"
walkdir = "2.5.0"
indicatif = "0.17"
rayon = "1.9.0"
anyhow = { workspace = true }

[features]
avm_debug = ["ruffle_core/avm_debug"]
render_debug_labels = ["ruffle_render_wgpu/render_debug_labels"]
render_trace = ["ruffle_render_wgpu/render_trace"]
lzma = ["ruffle_core/lzma"]
