[package]
name = "ruffle_frontend_utils"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
cpal = ["dep:cpal", "dep:bytemuck", "ruffle_core/audio"]
fs = []
navigator = ["fs", "dep:async-io", "dep:tokio", "dep:tokio-rustls", "dep:rustls", "dep:rustls-native-certs", "dep:rustls-pki-types"]

[dependencies]
toml_edit = { version = "0.23.6", features = ["parse"] }
url = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }
urlencoding = "2.1.3"
ruffle_core = { path = "../core", default-features = false }
ruffle_render = { path = "../render", default-features = false }
async-channel = { workspace = true }
async-io = { version = "2.6.0", optional = true }
futures-lite = "2.6.1"
reqwest = { version = "0.12.28", default-features = false, features = [
    "rustls-tls-native-roots",
    "socks",
    "cookies",
    "charset",
    "http2",
    "macos-system-configuration",
] }
tokio = { workspace = true, features = ["net", "macros"], optional = true }
tokio-rustls = { version = "0.26.4", optional = true, default-features = false, features = ["ring"] }
rustls = { version = "0.23.35", default-features = false, features = ["std", "tls12", "ring"], optional = true }
rustls-native-certs = { version = "0.8.3", optional = true }
rustls-pki-types = { version = "1.13.2", optional = true }
cpal = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
macro_rules_attribute = "0.2.2"
