[package]
name = "ruffle_frontend_utils"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = ["native-tls"]
cpal = ["dep:cpal", "dep:bytemuck", "ruffle_core/audio"]
fs = []
navigator = ["fs", "dep:async-io", "dep:tokio", "dep:rustls", "dep:tokio-rustls", "dep:rustls-native-certs", "dep:rustls-pki-types"]
rustls = ["dep:rustls"]
tokio-rustls = ["dep:tokio-rustls"]
rustls-native-certs = ["dep:rustls-native-certs"]
rustls-pki-types = ["dep:rustls-pki-types"]

# TLS backend for reqwest. `native-tls` is enabled by default; it uses the
# system TLS component (OpenSSL/SChannel/SecureTransport) and keeps the binary
# smaller, which suits desktop targets. Platforms where native-tls is
# unavailable or impractical (e.g. Android) should set `default-features = false`
# and enable `rustls-tls`, which bundles a pure-Rust TLS stack (with the OS root
# certificates). reqwest picks the backend automatically at runtime from
# whichever is compiled in, so no code change is needed to switch.
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls-native-roots"]

[dependencies]
toml_edit = { workspace = true, features = ["parse"] }
url = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
urlencoding = "2.1.3"
ruffle_core = { path = "../core", default-features = false }
ruffle_render = { path = "../render", default-features = false }
async-channel = { workspace = true }
async-io = { version = "2.6.0", optional = true }
futures-lite = "2.6.1"
# Note: no TLS backend is enabled in this list on purpose; it is provided by
# this crate's `native-tls` (default) / `rustls-tls` features instead.
reqwest = { workspace = true, features = [
    "socks",
    "cookies",
    "charset",
    "http2",
    "macos-system-configuration",
] }
tokio = { workspace = true, features = ["net", "macros"], optional = true }
cpal = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"], optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"], optional = true }
rustls-native-certs = { version = "0.8", optional = true }
rustls-pki-types = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
macro_rules_attribute = "0.2.2"
